--- a/src/index.css
+++ b/src/index.css
@@ -205,3 +205,10 @@ img {
 .Button:focus {
   background-color: #303f9f;
 }
+
+.SpinnerLoader {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+}
