--- a/src/index.css
+++ b/src/index.css
@@ -208,7 +208,7 @@ img {
 
 .SpinnerLoader {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 60px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
